--- a/blog.html
+++ b/blog.html
@@ -37,19 +37,19 @@
             <ul>
                 <li>
                     <h2>How I Met Your Mother</h2>
-                    <img src="/images/hımym.jpg" alt="" title="hımym-dizi" height="200">
+                    <img src="images/hımym.jpg" alt="" title="hımym-dizi" height="200">
                     <p>How I Met Your Mother, ABD'de yayın yapan CBS kanalında, 19 Eylül 2005'ten 31 Mart 2014'e kadar yayınlamış olan, yaratıcılığı ve yapımcılığını Carter Bays ve Craig Thomas'ın, başrollerini Josh Radnor, Jason Segel, Neil Patrick Harris, Cobie Smulders ve Alyson Hannigan'ın üstlendiği durum komedisi türündeki televizyon dizisidir. 31 Mart 2014'te yayınlanan 40 dakikalık özel bölümüyle sona ermiştir.</p>
                     <a href="https://www.netflix.com/tr/title/70143824" target="_blank">Netflix'te izlemek için tıklayınız.</a>
                 </li>
                 <li>
                     <h2>Dark</h2>
-                    <img src="/images/dark.jpg" alt="" title="dark-dizi" height="200">
+                    <img src="images/dark.jpg" alt="" title="dark-dizi" height="200">
                     <p>Dark, Baran bo Odar ve Jantje Friese tarafından yaratılan bilimkurgu ve gerilim türündeki Alman İnternet dizisi. Almanca olan ilk Netflix orijinal dizisidir ve 1 Aralık 2017'de yayınlanmaya başlamıştır.</p>
                     <a href="https://www.netflix.com/tr/title/80100172" target="_blank">Netflix'te izlemek için tıklayınız.</a>
                 </li>
                 <li>
                     <h2>Game Of Thrones</h2>
-                    <img src="/images/got.jpg" alt="" title="got-dizi" height="200">
+                    <img src="images/got.jpg" alt="" title="got-dizi" height="200">
                     <p>Game of Thrones, David Benioff ile D. B. Weiss tarafından yaratılan fantastik televizyon dizisidir. Dizi, ABD televizyon kanalı HBO'da yayınlanmıştır. George R. R. Martin'in epik fantezi serisi Buz ve Ateşin Şarkısı'ndan uyarlanmış olan dizi, adını serinin ilk kitabından almaktadır.</p>
                     <a href="https://www.blutv.com/diziler/yabanci/game-of-thrones" target="_blank">Blutv'de izlemek için tıklayınız.</a>
                 </li>
@@ -61,7 +61,7 @@
                 </li>
                 <li>
                     <h2>Breaking Bad</h2>
-                    <img src="/images/b-bad.jpg" alt="" title="breaking-bad-dizi" height="200">
+                    <img src="images/b-bad.jpg" alt="" title="breaking-bad-dizi" height="200">
                     <p>Breaking Bad, Vince Gilligan tarafından tasarlanmış ABD drama televizyon dizisidir. 50 yaşında lisede kimya öğretmeni olan Walter White (Bryan Cranston), maddi açıdan ailesinin gereksinimlerini karşılayabilmek için araba yıkamacısında ek iş yapmaktadır ancak bir süre sonra ileri derecede akciğer kanseri olduğunu ve çok kısa bir ömrünün kaldığını öğrenir. </p>
                     <a href="https://www.netflix.com/tr/title/70143836" target="_blank">Netflix'te izlemek için tıklayınız.</a>
                 </li>
