--- a/google.html
+++ b/google.html
@@ -10,7 +10,7 @@
     <!-- nav başlangıç -->
     <header>
         <nav>
-            <center><img src="/images/google.jpg" alt="Google"></center>
+            <center><img src="images/google.jpg" alt="Google"></center>
         </nav>
     </header>
     <!-- nav sonu -->
