--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <h2>Sevdiğim Diziler</h2>
 <h3>How I Met Your Mother</h3>
 <a href="https://img-s1.onedio.com/id-5c9e2b7c7355e79e18c6f48a/rev-0/raw/s-b691dd8bd3131f6ebd2cbcbfa2e1373226d033ef.jpg" target="_blank">
-    <img src="/images/hımym.jpg" alt="How I Met Your Mother" width="800" height="400">
+    <img src="images/hımym.jpg" alt="How I Met Your Mother" width="800" height="400">
 </a>
 
 <p>Dizi, 2030 yılında, Ted Mosby'nin çocuklarına anneleri (kendi eşi) ile nasıl tanıştığını anlatmasıyla başlar. Bob Saget'in seslendirmesiyle asıl karakteri Ted "Size annenizle nasıl tanıştığımı anlatacağım." der ve dizi 2005 yılına döner.</p>
